--- a/extension.html
+++ b/extension.html
@@ -23,9 +23,15 @@
     <body>
         <!-- HTML -->
 <h1>Merging</h1>
-<ul>Remote and local have <u>different text</u></ul>
+<ul>Remote and local have <u>different text</u> </ul>
 <li>Mostly happens with collaborating</li>
 <li>But can also happen if you edit your own local and remote.</li>
+<br>
+<h1>Automatic Merge</h1>
+<ul>Remote and local have <u>different text</u> in <u>different places</u> </ul>
+<h1>Merge Conflict</h1>'
+<ul>Remote and local have different text in the same place</ul>
+
 
 
         <!--
