Tue, Feb 3, 2026, 9:39 AM -05:00

--- a/extension.html
+++ b/extension.html
@@ -23,9 +23,11 @@
     <body>
         <!-- HTML -->
 <h1>Merging</h1>
-<ul>Remote and local have <u>different text</u> </ul>
-<li>Mostly happens with collaborating</li>
-<li>But can also happen if you edit your own local and remote.</li>
+<ul>
+    <li>Remote and local have <u>different text</u></li>
+    <li>Mostly happens when collaborating</li>
+    <li>But can also happen if you edit your own local and remote</li>
+</ul>
 <br>
 <h1>Automatic Merge</h1>
 <ul>Remote and local have <u>different text</u> in <u>different places</u> </ul>
