Tue, Feb 3, 2026, 9:40 AM -05:00

--- a/extension.html
+++ b/extension.html
@@ -24,9 +24,9 @@
         <!-- HTML -->
 <h1>Merging</h1>
 <ul>
-    <li>Remote and local have <u>different text</u></li>
-    <li>Mostly happens when collaborating</li>
-    <li>But can also happen if you edit your own local and remote</li>
+    <li>Remote and local have <strong><u>different text</u></strong></li>
+        <li>Mostly happens when collaborating</li>
+        <li>But can also happen if you edit your own local and remote</li>
 </ul>
 <br>
 <h1>Automatic Merge</h1>
