Tue, Feb 3, 2026, 9:41 AM -05:00

--- a/extension.html
+++ b/extension.html
@@ -22,12 +22,13 @@
     </head>
     <body>
         <!-- HTML -->
-<h1>Merging</h1>
+<div><h1>Merging</h1>
 <ul>
     <li>Remote and local have <strong><u>different text</u></strong></li>
         <li>Mostly happens when collaborating</li>
         <li>But can also happen if you edit your own local and remote</li>
 </ul>
+</div>
 <br>
 <h1>Automatic Merge</h1>
 <ul>Remote and local have <u>different text</u> in <u>different places</u> </ul>
